--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,8 @@ services:
     ports:
       - '8000:80'
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./src:/var/www/html
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
   php:
     build:
       context: ./dockerfiles
@@ -14,6 +15,7 @@ services:
     volumes:
       - ./src:/var/www/html:delegated
   mysql:
+    platform: linux/x86_64
     image: mysql:5.7
     env_file:
       - ./env/mysql.env
